White space and scroll fixed

--- a/style.css
+++ b/style.css
@@ -24,10 +24,7 @@ p{
 html, body{
 	width: 100%;
     height: 100%;
-	margin-left: 0;
-	margin-right: 0;
-	margin-bottom: 0;
-	overflow-x: hidden; 
+	margin: 0;
 }
 
 .logo{
@@ -199,13 +196,13 @@ footer .facebook{
 }
 
 footer .facebook h2, footer .contact h2, footer .british_full h2{
-	margin-bottom: 0.5;
+	margin-bottom: 0.5%;
 	text-align: left;
 }
 
 footer .facebook hr, footer .contact hr, footer .british_full hr{
 	/* width: 100%; */
-	height: 0.5;
+	height: 0.5%;
 	color: #eeeeee;
 }
 
@@ -366,6 +363,7 @@ footer .british_full a img{
 		position: relative;
 		top: 20%;
 		left: 80%;
+		width: 50px;
 	}
 
 	.nav_header .nav_list .nav_icon img{
